--- a/package.json
+++ b/package.json
@@ -98,8 +98,8 @@
     "eslint": "eslint components core pages test utils main.js run.js webpack.config.js",
     "stylelint": "stylelint \"components/**/*.css\" \"pages/**/*.css\"",
     "lint": "npm run eslint && npm run stylelint",
-    "test": "mocha --compilers js:babel-register",
-    "test:watch": "mocha --compilers js:babel-register --reporter min --watch",
+    "test": "mocha --compilers js:babel-register 'test/**/*.js'",
+    "test:watch": "mocha --compilers js:babel-register --reporter min --watch 'test/**/*.js'",
     "clean": "node run clean",
     "build": "node run build",
     "build:debug": "node run build --debug",
