--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,10 @@
 machine:
   node:
     version: v6.1.0
+
+deployment:
+  firebase:
+    branch: master
+    commands:
+      - node run build --release
+      - ./node_modules/.bin/firebase deploy --token=$FIREBASE_TOKEN --non-interactive
